@@ -24,7 +24,7 @@ import java.util.HashMap;
 
 import javax.sql.DataSource;
 
-import org.apache.log4j.Category;
+import org.apache.log4j.Logger;
 
 import tyk.drasap.common.DataSourceFactory;
 import tyk.drasap.common.ErrorUtility;
@@ -48,14 +48,13 @@ import tyk.drasap.common.UserException;
 public class APlotSystemMasterDB {
 
 	/** Logger（log4j） */
-	@SuppressWarnings("deprecation")
-	private static Category category = Category.getInstance(APlotSystemMasterDB.class.getName());
+	private static Logger category = Logger.getLogger(APlotSystemMasterDB.class.getName());
 	/** DB接続データソース */
 	private static DataSource ds;
-	static{
-		try{
+	static {
+		try {
 			ds = DataSourceFactory.getOracleDataSource();
-		} catch(Exception e){
+		} catch (Exception e) {
 			category.error("DataSourceの取得に失敗\n" + ErrorUtility.error2String(e));
 		}
 	}
@@ -63,14 +62,11 @@ public class APlotSystemMasterDB {
 	/** 図面ファイルvaultsフォルダパス. */
 	private String vaultsFolderPath = null;
 
-
 	/** 図面ファイルスプール先フォルダパス. */
 	private HashMap<Integer, String> spoolFolderPath = new HashMap<>();
 
-
 	/** 図面ファイルスプール先フォルダパス. */
 	private HashMap<Integer, String> documentFolderPath = new HashMap<>();
-
 
 	/**
 	 * スタンプ用設定クラス.
@@ -80,15 +76,15 @@ public class APlotSystemMasterDB {
 	 */
 	public class APlotStampData {
 		/** 刻印位置 X */
-		public  String positionX = "";
+		public String positionX = "";
 		/** 刻印位置 Y */
-		public  String positionY = "";
+		public String positionY = "";
 		/** 原点 */
-		public  String origin = "";
+		public String origin = "";
 		/** ID */
 		public String id = "";
 		/** バナーサイズ */
-		public  String zoom = "";
+		public String zoom = "";
 		/** 文字濃淡 */
 		public String color = "";
 		/** 日付形式. */
@@ -108,7 +104,6 @@ public class APlotSystemMasterDB {
 	 */
 	public static APlotSystemMasterDB _instance = null;
 
-
 	/**
 	 * コンストラクタ.
 	 * @throws SQLException
@@ -118,7 +113,7 @@ public class APlotSystemMasterDB {
 		// 初期化.
 		init();
 		//
-		initCheck( );
+		initCheck();
 	}
 
 	/**
@@ -129,12 +124,11 @@ public class APlotSystemMasterDB {
 	 */
 	public static APlotSystemMasterDB getInstance() throws SQLException, UserException {
 
-		if ( _instance == null ) {
+		if (_instance == null) {
 			_instance = new APlotSystemMasterDB();
 		}
 		return _instance;
 	}
-
 
 	/**
 	 * システム設定テーブル(ADMIN_SETTING_MASTER)からAPLOTに必要な値を取得.
@@ -171,11 +165,11 @@ public class APlotSystemMasterDB {
 	private static String selectAPlotSystemValues() {
 		//
 		StringBuilder sb = new StringBuilder("");
-		sb.append("'001'");   // ViewDBドライブ名
-		sb.append(",'800'");  // スプール先フォルダ（OJ1）
-		sb.append(",'801'");  // スプール先フォルダ（OJ2）
-		sb.append(",'805'");  // ドキュメントフルパス（OJ1）
-		sb.append(",'806'");  // ドキュメントフルパス（OJ2）
+		sb.append("'001'"); // ViewDBドライブ名
+		sb.append(",'800'"); // スプール先フォルダ（OJ1）
+		sb.append(",'801'"); // スプール先フォルダ（OJ2）
+		sb.append(",'805'"); // ドキュメントフルパス（OJ1）
+		sb.append(",'806'"); // ドキュメントフルパス（OJ2）
 		// 参考図出力用スタンプ設定
 		sb.append(",'810'"); // 参考図出力用スタンプ位置(X方向) 用紙の右下原点からの横方向の距離(mm)
 		sb.append(",'811'"); // 参考図出力用スタンプ位置(Y方向) 用紙の右下原点からの縦方向の距離(mm)
@@ -206,96 +200,98 @@ public class APlotSystemMasterDB {
 		conn.setAutoCommit(true);// 非トランザクション
 		Statement stmt = conn.createStatement();
 
-		this.spoolFolderPath.clear();
-		this.documentFolderPath.clear();
+		spoolFolderPath.clear();
+		documentFolderPath.clear();
 
 		// システム値を取得.
 		ResultSet rs = stmt.executeQuery(selectAPlotSystemValues());
 		try {
 			// 取得した情報からスキーマ名を取得.
-			while(rs.next()){
+			while (rs.next()) {
 
 				String id = rs.getString("SETTING_ID");
-				if ( "001".equals(id) ) {
+				if ("001".equals(id)) {
 					// 001: ViewDBドライブ名 の場合
-					this.vaultsFolderPath = rs.getString("VALUE");
-				} else if ( "800".equals(id) ) {
+					vaultsFolderPath = rs.getString("VALUE");
+				} else if ("800".equals(id)) {
 					// 800: スプール先フォルダ（OJ1）
-					this.spoolFolderPath.put(new Integer(1), rs.getString("VALUE"));
-				} else if ( "801".equals(id) ) {
+					spoolFolderPath.put(Integer.valueOf(1), rs.getString("VALUE"));
+				} else if ("801".equals(id)) {
 					// 801: スプール先フォルダ（OJ2）
-					this.spoolFolderPath.put(new Integer(2), rs.getString("VALUE"));
-				} else if ( "805".equals(id) ) {
+					spoolFolderPath.put(Integer.valueOf(2), rs.getString("VALUE"));
+				} else if ("805".equals(id)) {
 					// 805: ドキュメントフルパス（OJ1）
-					this.documentFolderPath.put(new Integer(1), rs.getString("VALUE"));
-				} else if ( "806".equals(id) ) {
+					documentFolderPath.put(Integer.valueOf(1), rs.getString("VALUE"));
+				} else if ("806".equals(id)) {
 					// 806: ドキュメントフルパス（OJ2）
-					this.documentFolderPath.put(new Integer(2), rs.getString("VALUE"));
+					documentFolderPath.put(Integer.valueOf(2), rs.getString("VALUE"));
 
-				} else if ( "810".equals(id) ) { // 参考図出力用スタンプ設定
+				} else if ("810".equals(id)) { // 参考図出力用スタンプ設定
 					// 参考図出力用スタンプ位置(X方向) 用紙の右下原点からの横方向の距離(mm)
-					this.stamp2setting.positionX = rs.getString("VALUE");
-				} else if ( "811".equals(id) ) {
+					stamp2setting.positionX = rs.getString("VALUE");
+				} else if ("811".equals(id)) {
 					// 参考図出力用スタンプ位置(Y方向) 用紙の右下原点からの縦方向の距離(mm)
-					this.stamp2setting.positionY = rs.getString("VALUE");
-				} else if ( "812".equals(id) ) {
+					stamp2setting.positionY = rs.getString("VALUE");
+				} else if ("812".equals(id)) {
 					// 参考図出力用スタンプ原点
-					this.stamp2setting.origin = rs.getString("VALUE");
-				} else if ( "813".equals(id) ) {
+					stamp2setting.origin = rs.getString("VALUE");
+				} else if ("813".equals(id)) {
 					// 参考図出力用スタンプID
-					this.stamp2setting.id = rs.getString("VALUE");
-				} else if ( "814".equals(id) ) {
+					stamp2setting.id = rs.getString("VALUE");
+				} else if ("814".equals(id)) {
 					// 参考図出力用スタンプスケーリング
-					this.stamp2setting.zoom = rs.getString("VALUE");
-				} else if ( "815".equals(id) ) {
+					stamp2setting.zoom = rs.getString("VALUE");
+				} else if ("815".equals(id)) {
 					// 参考図出力用スタンプ文字濃淡　0-100までの数値
-					this.stamp2setting.color = rs.getString("VALUE");
-				} else if ( "816".equals(id) ) {
+					stamp2setting.color = rs.getString("VALUE");
+				} else if ("816".equals(id)) {
 					// 参考図出力用スタンプ日付形式　0:YYYY/MM/DD、1:YY/MM/DD
-					if ( "0".equals(rs.getString("VALUE")) ) {
-						this.stamp2setting.dateFormat = "yyyy/MM/dd";
-					} else if ( "1".equals(rs.getString("VALUE")) ) {
-						this.stamp2setting.dateFormat = "yy/MM/dd";
+					if ("0".equals(rs.getString("VALUE"))) {
+						stamp2setting.dateFormat = "yyyy/MM/dd";
+					} else if ("1".equals(rs.getString("VALUE"))) {
+						stamp2setting.dateFormat = "yy/MM/dd";
 					}
-				} else if ( "719".equals(id) ) {
+				} else if ("719".equals(id)) {
 					// 参考図出力用スタンプ文字列
-					this.stamp2setting.stampText1 = rs.getString("VALUE");
+					stamp2setting.stampText1 = rs.getString("VALUE");
 
-				} else if ( "820".equals(id) ) { // 参考図出力用該当図スタンプ設定
+				} else if ("820".equals(id)) { // 参考図出力用該当図スタンプ設定
 					// 参考図出力用該当図スタンプ位置(X方向) 用紙の右下原点からの横方向の距離(mm)
-					this.stamp1setting.positionX = rs.getString("VALUE");
-				} else if ( "821".equals(id) ) {
+					stamp1setting.positionX = rs.getString("VALUE");
+				} else if ("821".equals(id)) {
 					// 参考図出力用該当図スタンプ位置(Y方向) 用紙の右下原点からの縦方向の距離(mm)
-					this.stamp1setting.positionY = rs.getString("VALUE");
-				} else if ( "822".equals(id) ) {
+					stamp1setting.positionY = rs.getString("VALUE");
+				} else if ("822".equals(id)) {
 					// 参考図出力用該当図スタンプ原点
-					this.stamp1setting.origin = rs.getString("VALUE");
-				} else if ( "823".equals(id) ) {
+					stamp1setting.origin = rs.getString("VALUE");
+				} else if ("823".equals(id)) {
 					// 参考図出力用該当図スタンプID
-					this.stamp1setting.id = rs.getString("VALUE");
-				} else if ( "824".equals(id) ) {
+					stamp1setting.id = rs.getString("VALUE");
+				} else if ("824".equals(id)) {
 					// 参考図出力用該当図スタンプスケーリング
-					this.stamp1setting.zoom = rs.getString("VALUE");
-				} else if ( "825".equals(id) ) {
+					stamp1setting.zoom = rs.getString("VALUE");
+				} else if ("825".equals(id)) {
 					// 参考図出力用該当図スタンプ文字濃淡　0-100までの数値
-					this.stamp1setting.color = rs.getString("VALUE");
-				} else if ( "826".equals(id) ) {
+					stamp1setting.color = rs.getString("VALUE");
+				} else if ("826".equals(id)) {
 					// 参考図出力用該当図スタンプ日付形式　0:YYYY/MM/DD、1:YY/MM/DD
-					if ( "0".equals(rs.getString("VALUE")) ) {
-						this.stamp1setting.dateFormat = "yyyy/MM/dd";
-					} else if ( "1".equals(rs.getString("VALUE")) ) {
-						this.stamp1setting.dateFormat = "yy/MM/dd";
+					if ("0".equals(rs.getString("VALUE"))) {
+						stamp1setting.dateFormat = "yyyy/MM/dd";
+					} else if ("1".equals(rs.getString("VALUE"))) {
+						stamp1setting.dateFormat = "yy/MM/dd";
 					}
-				} else if ( "736".equals(id) ) {
+				} else if ("736".equals(id)) {
 					// 参考図出力用該当図スタンプ文字列
-					this.stamp1setting.stampText1 = rs.getString("VALUE");
+					stamp1setting.stampText1 = rs.getString("VALUE");
 				}
 			}
 		} catch (SQLException ex) {
 			category.fatal("A-PLOT出図 管理者設定マスタ情報取得でSQLエラー", ex);
 			throw ex;
 		} finally {
-			if ( rs != null ) rs.close();
+			if (rs != null) {
+				rs.close();
+			}
 		}
 
 		//
@@ -305,20 +301,20 @@ public class APlotSystemMasterDB {
 	 * 念のため必須の環境設定がされているか確認.
 	 * @throws UserException
 	 */
-	private void initCheck( ) throws UserException {
-		if ( this.vaultsFolderPath == null || "".equals(this.vaultsFolderPath) ) {
+	private void initCheck() throws UserException {
+		if (vaultsFolderPath == null || "".equals(vaultsFolderPath)) {
 			throw new UserException("管理者設定マスタに[ViewDBドライブ名]が設定されていません.");
 		}
-		if ( this.spoolFolderPath.size() == 0 ) {
+		if (spoolFolderPath.size() == 0) {
 			throw new UserException("管理者設定マスタに[スプール先フォルダ]が設定されていません.");
 		}
-		if ( this.documentFolderPath.size() == 0 ) {
+		if (documentFolderPath.size() == 0) {
 			throw new UserException("管理者設定マスタに[ドキュメントフルパス]が設定されていません.");
 		}
-		if ( "".equals(this.stamp1setting.id) ) {
+		if ("".equals(stamp1setting.id)) {
 			throw new UserException("管理者設定マスタに[参考図出力用スタンプID]が設定されていません.");
 		}
-		if ( "".equals(this.stamp2setting.id) ) {
+		if ("".equals(stamp2setting.id)) {
 			throw new UserException("管理者設定マスタに[参考図出力用該当図スタンプID]が設定されていません.");
 		}
 
@@ -329,7 +325,7 @@ public class APlotSystemMasterDB {
 	 * @return 図面ファイルの格納フォルダパス.
 	 */
 	public String getVaultsFolderPath() {
-		return this.vaultsFolderPath;
+		return vaultsFolderPath;
 	}
 
 	/**
@@ -337,7 +333,7 @@ public class APlotSystemMasterDB {
 	 * @return 図面ファイルのスプール先フォルダパス.
 	 */
 	public String getSpoolFolderPath(int schemaNo) {
-		return this.spoolFolderPath.get(new Integer(schemaNo));
+		return spoolFolderPath.get(Integer.valueOf(schemaNo));
 	}
 
 	/**
@@ -345,16 +341,15 @@ public class APlotSystemMasterDB {
 	 * @return 図面ファイルのフルパス.
 	 */
 	public String getDocumentFolderPath(int schemaNo) {
-		return this.documentFolderPath.get(new Integer(schemaNo));
+		return documentFolderPath.get(Integer.valueOf(schemaNo));
 	}
-
 
 	/**
 	 * スタンプ1の設定情報取得.
 	 * @return スタンプ1の設定情報.
 	 */
 	public APlotStampData getStamp1Data() {
-		return this.stamp1setting;
+		return stamp1setting;
 	}
 
 	/**
@@ -362,8 +357,7 @@ public class APlotSystemMasterDB {
 	 * @return スタンプ1の設定情報.
 	 */
 	public APlotStampData getStamp2Data() {
-		return this.stamp2setting;
+		return stamp2setting;
 	}
-
 
 }
